--- a/manifest.yml
+++ b/manifest.yml
@@ -153,6 +153,85 @@ dependencies:
   md5: 02a017c606bbf9b9f8382d4e872a14cb
   cf_stacks:
   - cflinuxfs2 
+- name: r-base
+  version: 3.0.2
+  uri: http://kr.archive.ubuntu.com/ubuntu/pool/universe/r/r-base/r-base_3.0.2-1ubuntu1_all.deb
+  md5: adebbdf314b38ca4f904a8b3e118ac09
+  cf_stacks:
+  - cflinuxfs2 
+- name: r-base-core
+  version: 3.0.2
+  uri: http://kr.archive.ubuntu.com/ubuntu/pool/universe/r/r-base/r-base-core_3.0.2-1ubuntu1_amd64.deb
+  md5: 97ffe4366c3bc5dab6cee1ff30517664
+  cf_stacks:
+  - cflinuxfs2 
+- name: r-base-dev
+  version: 3.0.2
+  uri: http://kr.archive.ubuntu.com/ubuntu/pool/universe/r/r-base/r-base-dev_3.0.2-1ubuntu1_all.deb
+  md5: 2e5b6f1f6f73bf2bbd02973ce5343294
+  cf_stacks:
+  - cflinuxfs2
+- name: httpvu
+  version: 1.3.5
+  uri: http://cran.us.r-project.org/src/contrib/httpuv_1.3.5.tar.gz
+  md5: 48d894ff0067148f41a651634fbb2012
+  cf_stacks:
+  - cflinuxfs2
+- name: Rcpp
+  version: 0.12.12
+  uri: http://cran.us.r-project.org/src/contrib/Rcpp_0.12.12.tar.gz
+  md5: 97b36a3b567e3438067c4a7d0075fd90
+  cf_stacks:
+  - cflinuxfs2
+- name: mime
+  version: 0.5
+  uri: http://cran.us.r-project.org/src/contrib/mime_0.5.tar.gz
+  md5: 87e00b6d57b581465c19ae869a723c4d
+  cf_stacks:
+  - cflinuxfs2
+- name: jsonlite
+  version: 1.5
+  uri: http://cran.us.r-project.org/src/contrib/jsonlite_1.5.tar.gz
+  md5: 2a81c261a702fccbbd5d2b32df108f76
+  cf_stacks:
+  - cflinuxfs2
+- name: xtable
+  version: 1.8
+  uri: http://cran.us.r-project.org/src/contrib/xtable_1.8-2.tar.gz
+  md5: 239e4825cd046156a67efae3aac01d86
+  cf_stacks:
+  - cflinuxfs2
+- name: digest
+  version: 0.6.12
+  uri: http://cran.us.r-project.org/src/contrib/digest_0.6.12.tar.gz
+  md5: 738efd4d9a37c5a4001ae66e954ce07e
+  cf_stacks:
+  - cflinuxfs2
+- name: htmltools
+  version: 0.3.6
+  uri: http://cran.us.r-project.org/src/contrib/htmltools_0.3.6.tar.gz
+  md5: 336419c2143f958862e01ef1bbc9c253
+  cf_stacks:
+  - cflinuxfs2
+- name: R6
+  version: 2.2.2
+  uri: http://cran.us.r-project.org/src/contrib/R6_2.2.2.tar.gz
+  md5: 635b58c65bff624a1fab69c6b1989801
+  cf_stacks:
+  - cflinuxfs2
+- name: sourcetools
+  version: 0.1.6
+  uri: http://cran.us.r-project.org/src/contrib/sourcetools_0.1.6.tar.gz
+  md5: c78a816384b168d04af41bd7ff4d909d
+  cf_stacks:
+  - cflinuxfs2
+- name: shiny
+  version: 1.0.4
+  uri: http://cran.us.r-project.org/src/contrib/shiny_1.0.4.tar.gz
+  md5: 6373ea61ed2d666e3ab5dca18e6e90f0
+  cf_stacks:
+  - cflinuxfs2
+
 exclude_files:
 - ".bin"
 - ".bundle"
