--- a/test/manifest.yml
+++ b/test/manifest.yml
@@ -4,7 +4,7 @@ applications:
 #  buildpack: https://github.com/myminseok/ruby-buildpack.git#test
   buildpack: R-buildpack
 #  command: echo "BBBB" && nc -l -p 8080
-  command:  source /home/vcap/app/.profile.d/000_apt.sh ;  fakechroot fakeroot chroot /home/vcap/app sh /run.sh
+  command:  source /home/vcap/app/.profile.d/r_environment.sh  ;  fakechroot fakeroot chroot /home/vcap/app sh /run.sh
   memory: 2GB
   disk_quota: 2GB
   health-check-type: process
