--- a/test/shiny/001-hello/manifest.yml
+++ b/test/shiny/001-hello/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: r-test
+- name: 001-hello
 #  buildpack: https://github.com/myminseok/ruby-buildpack.git#test
   buildpack: R-buildpack
 #  command: echo "BBBB" && nc -l -p 8080
